Add comprehensive test suite with JUnit 5, Mockito, AspectJ and full coverage reporting
Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>