@@ -48,14 +48,19 @@ public class Engine {
         
         long startTime = System.currentTimeMillis();
         
-        // Initialize plugins using virtual threads for modern concurrency
+        // Initialize plugins using CompletableFuture for concurrent execution
+        // Note: Using common thread pool instead of virtual threads for Java 17 compatibility
         List<CompletableFuture<Void>> pluginFutures = runtimePlugins.stream()
             .map(plugin -> CompletableFuture.runAsync(() -> {
-                log.info("Initializing plugin: {}", plugin.getName());
-                plugin.initialize();
-                log.info("Plugin initialized: {}", plugin.getName());
-            }, Executors.newVirtualThreadPerTaskExecutor()))
-            .toList();
+                try {
+                    log.info("Initializing plugin: {}", plugin.getName());
+                    plugin.initialize();
+                    log.info("Plugin initialized: {}", plugin.getName());
+                } catch (Exception e) {
+                    log.error("Failed to initialize plugin: {}", plugin.getName(), e);
+                }
+            }))
+            .collect(java.util.stream.Collectors.toList());
         
         // Wait for all plugins to initialize
         CompletableFuture.allOf(pluginFutures.toArray(new CompletableFuture[0])).join();
